// user.proto
syntax = "proto3";

package user;

service UserService {
  rpc GetUserById (UserRequest) returns (UserResponse);
}

service AmountService {
    rpc GetAmountById (AmountRequest) returns (AmountResponse);
}

message AmountRequest {
    string id = 1;
    float amount = 2;
}

message AmountResponse {
    bool isSuccess = 1;
    string message = 2;
}

message UserRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
}
